opa/ns-resourcequota-policy/patch-blue.yaml
### Only K8s Cluster Admin can execute this file
### Pre-requisite - Create users/groups defined in RoleBinding section
---
# Create the app specific namespace
apiVersion: v1
kind: Namespace
metadata:
  name: blue
