opa/ns-resourcequota-policy/ns-resourcequota-constraint.yaml
---
# constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResourceQuota
metadata:
  name: namespace-must-have-resourcequota
spec:
  match:
    kinds:
      - apiGroups: ["", "apps"]
        kinds: ["Pod", "Deployment"]
    excludedNamespaces:
      - gatekeeper-system
